--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,32 @@
 name = "hakurei"
 version = "0.1.0"
 authors = ["usami-renko <usami-ssc@protonmail.com>"]
+description = "Rendering Engine implemented in Vulkan and Rust."
+license = "MIT"
+keywords = ["Vulkan", "Rust", "Graphics"]
 
 [dependencies]
+winit = "0.17.1"
+ash = "0.24.4"
+num = "0.2"
+cgmath = "0.16.1"
+image = "0.19.0"
+memoffset = "0.2"
+
+[target.'cfg(target_os = "macos")'.dependencies]
+metal-rs = "0.10.4"
+cocoa = "0.15.0"
+objc = "0.2.5"
+
+[target.'cfg(target_os = "windows")'.dependencies]
+winapi = { version = "0.3.5", features = ["windef", "winuser"] }
+
+
+[workspace]
+members = [
+    "examples/triangle"
+]
+
+[[bin]]
+name = "triangle"
+path ="examples/triangle/src/main.rs"
