:truck: Move the modules of structures mod to utility mod.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,7 @@ winapi = { version = "0.3.5", features = ["windef", "winuser"] }
 members = [
     "examples/triangle"
 ]
+
+[features]
+verbose = []
+
