--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ keywords = ["Vulkan", "Rust", "Graphics"]
 winit = "0.17.1"
 ash = "0.24.4"
 num = "0.2"
-cgmath = "0.16.1"
 image = "0.19.0"
 memoffset = "0.2"
 
@@ -26,7 +25,8 @@ winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }
 [workspace]
 members = [
     "examples/Eg001.triangle",
-    "examples/Eg002.draw_index",
+    "examples/Eg002.index_buffer",
+    "examples/Eg004.uniform_buffer"
 ]
 
 [features]
