--- a/examples/Eg002.index_buffer/Cargo.toml
+++ b/examples/Eg002.index_buffer/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "draw_index"
+name = "index_buffer"
 version = "0.1.0"
 authors = ["usami-renko <usami-ssc@protonmail.com>"]
-description = "Use index buffer to draw triangle."
+description = "Use index buffer to draw an rectangle."
 
 [dependencies]
 hakurei = { path = "../.." }
