--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ rust:
 script:
 - cargo build --manifest-path ./Cargo.toml
 - cargo build --manifest-path ./examples/Eg001.triangle/Cargo.toml
-- cargo build --manifest-path ./examples/Eg002.draw_index/Cargo.toml
+- cargo build --manifest-path ./examples/Eg002.index_buffer/Cargo.toml
+- cargo build --manifest-path ./examples/Eg003.staging_buffer/Cargo.toml
+- cargo build --manifest-path ./examples/Eg004.uniform_buffer/Cargo.toml
