--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,4 @@ script:
 - cargo build --manifest-path ./examples/Eg002.index_buffer/Cargo.toml
 - cargo build --manifest-path ./examples/Eg003.staging_buffer/Cargo.toml
 - cargo build --manifest-path ./examples/Eg004.uniform_buffer/Cargo.toml
+- cargo build --manifest-path ./examples/Eg005.texture_mapping/Cargo.toml
