--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ members = [
     "examples/Eg003.staging_buffer",
     "examples/Eg004.uniform_buffer",
     "examples/Eg005.texture_mapping",
+    "examples/Eg006.box",
 ]
