--- a/hakurei/Cargo.toml
+++ b/hakurei/Cargo.toml
@@ -15,6 +15,7 @@ num       = "0.2"
 image     = "0.19.0"
 memoffset = "0.2"
 smallvec  = "0.6.5"
+cgmath    = "0.16.1"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 metal-rs = "0.10.4"
