--- a/hakurei/Cargo.toml
+++ b/hakurei/Cargo.toml
@@ -16,6 +16,7 @@ image     = "0.19.0"
 memoffset = "0.2"
 smallvec  = "0.6.5"
 cgmath    = "0.16.1"
+shaderc   = "0.3.10"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 metal-rs = "0.10.4"
