--- a/examples/Eg01.basic/Cargo.toml
+++ b/examples/Eg01.basic/Cargo.toml
@@ -28,3 +28,7 @@ path = "src/04.texture/main.rs"
 [[bin]]
 name = "05"
 path = "src/05.cube/main.rs"
+
+[[bin]]
+name = "06"
+path = "src/06.depth/main.rs"
