:recycle: Redesign API about creating sample images.
:wheelchair: Adjust the publicity of API about image.

--- a/examples/Eg01.basic/Cargo.toml
+++ b/examples/Eg01.basic/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hakurei-basic"
+name = "hakurei-ex01-baisc"
 version = "0.1.0"
 authors = ["usami-renko <usami-ssc@protonmail.com>"]
 description = "Basic examples of hakurei Engine."
