--- a/hakurei/Cargo.toml
+++ b/hakurei/Cargo.toml
@@ -17,6 +17,7 @@ memoffset = "0.2"
 smallvec  = "0.6.5"
 cgmath    = "0.16.1"
 shaderc   = "0.3.10"
+# rayon = "1.0.2" // Rayon is a data-parallelism library for Rust.
 
 [target.'cfg(target_os = "macos")'.dependencies]
 metal-rs = "0.10.4"
