:sparkles: Support reading data from obj file.
:heavy_plus_sign: Add tobj crate as new dependency.
:bug: Fix some logical error in creation of descriptor set.
:pizza: Add an example of loading model.

--- a/examples/Eg01.basic/Cargo.toml
+++ b/examples/Eg01.basic/Cargo.toml
@@ -32,3 +32,7 @@ path = "src/05.cube/main.rs"
 [[bin]]
 name = "06"
 path = "src/06.depth/main.rs"
+
+[[bin]]
+name = "07"
+path = "src/07.model/main.rs"
