--- a/hakurei/Cargo.toml
+++ b/hakurei/Cargo.toml
@@ -22,6 +22,8 @@ tobj         = "0.1.6"  # tobj is a tiny OBJ loader.
 toml         = "0.4"    # A TOML-parsing library, use to read engine configuration.
 serde        = "1.0.80" # A generic serialization/deserialization framework.
 serde_derive = "1.0.80" # Macros implementation of #[derive(Serialize, Deserialize)].
+gltf         = "0.11.2" # gltf loader.
+# error-chain = "0.12.0" # Consistent error handling for Rust.
 # rayon = "1.0.2" // Rayon is a data-parallelism library for Rust.
 
 # vulkan platform dependencies on macOS.
