--- a/hakurei/Cargo.toml
+++ b/hakurei/Cargo.toml
@@ -12,6 +12,7 @@ hakurei-vulkan = { path = "../hakurei-vulkan" }
 hakurei-macros = { path = "../hakurei-macros" }
 
 winit        = "0.18.0" # winit is a window creation and management library.
+ash          = "0.26.0" # ash is the vulkan bindings for Rust.
 num          = "0.2"    # num crate is a collection of numeric types and traits for Rust.
 image        = "0.20" # image crate provides basic imaging processing functions and methods for converting to and from image formats.
 memoffset    = "0.2"    # memoffset provides C-Like offset_of functionality for Rust structs.
