--- a/examples/Eg01.basic/Cargo.toml
+++ b/examples/Eg01.basic/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["usami-renko <usami-ssc@protonmail.com>"]
 description = "Basic examples of hakurei Engine."
 
 [dependencies]
+ash = "0.26.0"
 hakurei-vulkan = { path = "../../hakurei-vulkan" }
 hakurei-macros = { path = "../../hakurei-macros" }
 hakurei = { path = "../../hakurei" }
