--- a/examples/Eg01.basic/Cargo.toml
+++ b/examples/Eg01.basic/Cargo.toml
@@ -32,10 +32,10 @@ path = "src/04.texture/main.rs"
 name = "05"
 path = "src/05.cube/main.rs"
 
-[[bin]]
-name = "06"
-path = "src/06.depth/main.rs"
+#[[bin]]
+#name = "06"
+#path = "src/06.depth/main.rs"
 
-[[bin]]
-name = "07"
-path = "src/07.model/main.rs"
+#[[bin]]
+#name = "07"
+#path = "src/07.model/main.rs"
