--- a/gensokyo/Cargo.toml
+++ b/gensokyo/Cargo.toml
@@ -15,7 +15,7 @@ num          = "0.2"    # num crate is a collection of numeric types and traits 
 image        = "0.20"   # image crate provides basic imaging processing functions and methods for converting to and from image formats.
 memoffset    = "0.2"    # memoffset provides C-Like offset_of functionality for Rust structs.
 smallvec     = "0.6.5"  # smallvec store up to a small number of items on the stack to provide optimization for Rust.
-cgmath       = "0.16.1" # cgmath is a linear algebra and mathematics library for computer graphics.
+nalgebra     = "0.16"   # Linear algebra library with transformations and statically-sized or dynamically-sized matrices.
 tobj         = "0.1.6"  # tobj is a tiny OBJ loader.
 toml         = "0.4"    # A TOML-parsing library, use to read engine configuration.
 gltf         = "0.11.2" # gltf loader.
