--- a/gensokyo/Cargo.toml
+++ b/gensokyo/Cargo.toml
@@ -16,7 +16,6 @@ image        = "0.20"   # image crate provides basic imaging processing function
 memoffset    = "0.2"    # memoffset provides C-Like offset_of functionality for Rust structs.
 smallvec     = "0.6.5"  # smallvec store up to a small number of items on the stack to provide optimization for Rust.
 nalgebra     = "0.16"   # Linear algebra library with transformations and statically-sized or dynamically-sized matrices.
-tobj         = "0.1.6"  # tobj is a tiny OBJ loader.
 toml         = "0.4"    # A TOML-parsing library, use to read engine configuration.
 gltf         = "0.11.2" # gltf loader.
 serde        = "1.0.80" # A generic serialization/deserialization framework.
@@ -24,8 +23,8 @@ serde_derive = "1.0.80" # Macros implementation of #[derive(Serialize, Deseriali
 # error-chain = "0.12.0" # Consistent error handling for Rust.
 # rayon = "1.0.2" # Rayon is a data-parallelism library for Rust.
 
-gensokyo-vulkan = { path = "../gensokyo-vulkan" }
-gensokyo-macros = { path = "../gensokyo-macros" }
+gensokyo-vulkan = { package = "gensokyo-vulkan", path = "../gensokyo-vulkan" }
+gensokyo-macros = { package = "gensokyo-macros", path = "../gensokyo-macros" }
 
 # gsvk = { package = "gensokyo-vulkan", path = "../gensokyo-vulkan" }
 # gsma = { package = "gensokyo-macros", path = "../gensokyo-macros" }
