--- a/examples/Eg02.gltf/Cargo.toml
+++ b/examples/Eg02.gltf/Cargo.toml
@@ -1,6 +1,6 @@
 
 [package]
-name    = "gensokyo-eg02-gltf"
+name    = "example02"
 version = "0.1.0"
 authors = ["usami-renko <usami-ssc@protonmail.com>"]
 edition = "2018"
@@ -12,7 +12,7 @@ gensokyo-macros = { package = "gensokyo-macros", path = "../../gensokyo-macros" 
 
 ash = "0.26.0"
 nalgebra = "0.16"
-
+toml = "0.4"
 
 [[bin]]
 name = "01"
