:construction: Refactor code about glTF.
:pencil2: Simplify the package name of examples.
:pizza: Introduce an example to draw a box imported from glTF.

--- a/examples/Eg01.basic/Cargo.toml
+++ b/examples/Eg01.basic/Cargo.toml
@@ -1,13 +1,12 @@
 
 [package]
-name        = "gensokyo-eg01-baisc"
+name        = "example01"
 version     = "0.1.0"
 authors     = ["usami-renko <usami-ssc@protonmail.com>"]
 edition     = "2018"
 description = "Basic examples of gensokyo Engine."
 
 [dependencies]
-
 gensokyo = { package = "gensokyo", path = "../../gensokyo" }
 gensokyo-vulkan = { package = "gensokyo-vulkan", path = "../../gensokyo-vulkan" }
 gensokyo-macros = { package = "gensokyo-macros", path = "../../gensokyo-macros" }
