--- a/examples/Eg02.gltf/Cargo.toml
+++ b/examples/Eg02.gltf/Cargo.toml
@@ -7,12 +7,12 @@ edition     = "2018"
 description = "Gltf examples of gensokyo Engine."
 
 [dependencies]
-gensokyo = { package = "gensokyo", path = "../../gensokyo" }
-gensokyo-vulkan = { package = "gensokyo-vulkan", path = "../../gensokyo-vulkan" }
-gensokyo-macros = { package = "gensokyo-macros", path = "../../gensokyo-macros" }
-
 ash = "0.27.1"
 nalgebra = "0.16"
+
+gsma = { package = "gensokyo-macros", path = "../../gensokyo-macros" }
+gsvk = { package = "gensokyo-vulkan", path = "../../gensokyo-vulkan" }
+gs   = { package = "gensokyo", path = "../../gensokyo" }
 
 [[bin]]
 name = "01"
