--- a/gensokyo-vulkan/Cargo.toml
+++ b/gensokyo-vulkan/Cargo.toml
@@ -15,8 +15,7 @@ num       = "0.2"    # num crate is a collection of numeric types and traits for
 memoffset = "0.2"    # memoffset provides C-Like offset_of functionality for Rust structs.
 shaderc   = "0.3.10" # shaderc is the Rust bindings for the shaderc library.
 serde     = "1.0.80" # A generic serialization/deserialization framework.
-# error-chain = "0.12.0" # Consistent error handling for Rust.
-# rayon = "1.0.2" # Rayon is a data-parallelism library for Rust.
+failure   = "0.1.5"  # error handling abstraction.
 
 gsma = { package = "gensokyo-macros", path = "../gensokyo-macros" }
 
