--- a/gensokyo-vulkan/Cargo.toml
+++ b/gensokyo-vulkan/Cargo.toml
@@ -9,13 +9,14 @@ license     = "MIT"
 keywords    = ["Vulkan", "Rust", "Graphics"]
 
 [dependencies]
-winit     = "0.18.0" # winit is a window creation and management library.
-ash       = "0.27.1" # ash is the vulkan bindings for Rust.
-num       = "0.2"    # num crate is a collection of numeric types and traits for Rust.
-memoffset = "0.2"    # memoffset provides C-Like offset_of functionality for Rust structs.
-shaderc   = "0.3.10" # shaderc is the Rust bindings for the shaderc library.
-serde     = "1.0.80" # A generic serialization/deserialization framework.
-failure   = "0.1.5"  # error handling abstraction.
+winit          = "0.18.0" # winit is a window creation and management library.
+ash            = "0.27.1" # ash is the vulkan bindings for Rust.
+num            = "0.2"    # num crate is a collection of numeric types and traits for Rust.
+memoffset      = "0.2"    # memoffset provides C-Like offset_of functionality for Rust structs.
+shaderc        = "0.3.10" # shaderc is the Rust bindings for the shaderc library.
+serde          = "1.0.80" # A generic serialization/deserialization framework.
+failure        = "0.1.5"  # error handling abstraction.
+failure_derive = "0.1.5"  # derives for the failure crate.
 
 gsma = { package = "gensokyo-macros", path = "../gensokyo-macros" }
 
