--- a/examples/vk-examples/Cargo.toml
+++ b/examples/vk-examples/Cargo.toml
@@ -1,23 +1,12 @@
 
 [package]
-name        = "example02"
+name        = "vk-examples"
 version     = "0.1.0"
 authors     = ["usami-renko <usami-ssc@protonmail.com>"]
 edition     = "2018"
-description = "glTF examples of gensokyo Engine."
+description = "A Rust implementation of Vulkan Examples(https://github.com/SaschaWillems/Vulkan) via Gensokyo Engine."
 
 [dependencies]
 gsma = { package = "gensokyo-macros", path = "../../gensokyo-macros" }
 gsvk = { package = "gensokyo-vulkan", path = "../../gensokyo-vulkan" }
 gs   = { package = "gensokyo", path = "../../gensokyo" }
-
-ash = "0.27.1"
-nalgebra = "0.16"
-
-[[bin]]
-name = "01"
-path = "src/01.triangle/main.rs"
-
-[[bin]]
-name = "02"
-path = "src/02.box/main.rs"
