:bug: Introduce an matrix in vertex shader to fix y-coordinate upside-down problem.
:children_crossing: Set default FrontFace to COUNTER_CLOCKWISE.

--- a/examples/vk-examples/src/pbrbasic/gensokyo.toml
+++ b/examples/vk-examples/src/pbrbasic/gensokyo.toml
@@ -5,3 +5,7 @@ title = "Vulkan Example - Physical based shading basics"
 [window.dimension]
 width  = 1280
 height = 720
+
+[window.cursor]
+is_grab = true
+is_hide = true
