:sparkles: Add config to print message about selected device to console.

--- a/examples/vk-examples/src/triangle/gensokyo.toml
+++ b/examples/vk-examples/src/triangle/gensokyo.toml
@@ -1,4 +1,9 @@
 
+[core.device.print]
+device_name        = true
+device_api_version = true
+device_type        = true
+
 [window]
 title = "Vulkan Example - Basic indexed triangle"
 
