:pizza: Basicly implement SaschaWillems/Vulkan Basics 06-Specialization constants.

--- a/examples/vk-examples/Cargo.toml
+++ b/examples/vk-examples/Cargo.toml
@@ -39,6 +39,10 @@ path = "src/dynamicuniformbuffer/main.rs"
 [[bin]]
 name = "pushconstants"
 path = "src/pushconstants/main.rs"
+
+[[bin]]
+name = "specializationconstants"
+path = "src/specializationconstants/main.rs"
 # -----------------------------------------------------
 
 [[bin]]
