:pizza: Basicly implement SaschaWillems/Vulkan Basics 07-Texture mapping.

--- a/examples/vk-examples/Cargo.toml
+++ b/examples/vk-examples/Cargo.toml
@@ -43,8 +43,14 @@ path = "src/pushconstants/main.rs"
 [[bin]]
 name = "specializationconstants"
 path = "src/specializationconstants/main.rs"
+
+[[bin]]
+name = "texture"
+path = "src/texture/main.rs"
 # -----------------------------------------------------
 
+# Physically Based Rendering --------------------------
 [[bin]]
 name = "pbrbasic"
 path = "src/pbrbasic/main.rs"
+# -----------------------------------------------------
