--- a/examples/Eg01.basic/Cargo.toml
+++ b/examples/Eg01.basic/Cargo.toml
@@ -4,6 +4,7 @@ name        = "example01"
 version     = "0.1.0"
 authors     = ["usami-renko <usami-ssc@protonmail.com>"]
 edition     = "2018"
+workspace   = "../.."
 description = "Basic examples of gensokyo Engine."
 
 [dependencies]
