--- a/examples/Eg02.gltf/Cargo.toml
+++ b/examples/Eg02.gltf/Cargo.toml
@@ -4,6 +4,7 @@ name        = "example02"
 version     = "0.1.0"
 authors     = ["usami-renko <usami-ssc@protonmail.com>"]
 edition     = "2018"
+workspace   = "../.."
 description = "glTF examples of gensokyo Engine."
 
 [dependencies]
