--- a/gensokyo-macros/Cargo.toml
+++ b/gensokyo-macros/Cargo.toml
@@ -4,4 +4,5 @@ name        = "gensokyo-macros"
 version     = "0.1.0"
 authors     = ["usami-renko <usami-ssc@protonmail.com>"]
 edition     = "2018"
+workspace   = ".."
 description = "Practical macros for gensokyo and application."
